# Rack

./: .gitignore  .gitmodules  CMakeLists.txt  brew.txt
src/: main.cpp  rtmidi.cpp  window.cpp
